[package]
name = "cayley"
version = "0.2.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["Simeon Duwel"]
description = "A crate for generic, stack-allocated linear algebra stuff, such as matrices"
repository = "https://github.com/WalrusGumboot/cayley"
keywords = ["linear-algebra", "algebra", "matrix"]
categories = ["mathematics", "science", "algorithms"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.15"
